@@ -55,6 +55,7 @@ struct config_file;
 struct daemon;
 struct listen_port;
 struct ub_randstate;
+struct region;
 
 /** size of table used for random numbers. large to be more secure. */
 #define RND_STATE_SIZE 256
@@ -133,6 +134,8 @@ struct worker {
 	struct alloc_cache alloc;
 	/** per thread statistics */
 	struct server_stats stats;
+	/** thread scratch region */
+	struct region* scratchpad;
 };
 
 /**
