@@ -5,6 +5,7 @@
 	  alloc cache to store released keys.
 	- alloc cache special_release() locks if necessary.
 	- rrset trustworthiness type added.
+	- thread keeps a scratchpad region for handling messages.
 
 3 May 2007: Wouter
 	- fill refs. Use new parse and encode to answer queries.
